music-player/src/style/search.scss
.searchBox {
    background-color: var(--background);
    color: var(--highlight);
    height: 40px !important;
    border-radius: 5px;
    margin-bottom: 3vh;
}

::-webkit-scrollbar {
    width: 6px;
}
::-webkit-scrollbar-track {
    background: #0000002a;
    border-radius: 100px;
}
::-webkit-scrollbar-thumb {
    background: #88888857;
    border-radius: 100px;
}
::-webkit-scrollbar-thumb:hover {
    background: #8888889c;
}

.searchContainer {
    width: 100%;
    height: 100%;
    display: flex;flex-direction: column; align-items: center;
    .searchBox {
        margin-top: 3vh;
        width: 90%;
        padding-left: 10px;
    }
    .results {
        display:flex;flex-direction:row;
        overflow-y: scroll;
        scroll-behavior: smooth;
        flex-wrap:wrap;
        width:90%;
        height:calc(100% - (5vh + 3vh + 40px));
        justify-content: space-between;
        margin-bottom: 2vh;
        padding-right: 6px;
        .result {
            width: calc(50% - 10px);
            margin-bottom: 7px;
            aspect-ratio: 1/1 !important;
            overflow: hidden;
            border-radius: 20px;
            position: relative;
            img {
                position: absolute;
                left:0;top:0;
                width:100%;height:100%;
                z-index: -1;
            }
            .glass {
                position: absolute;
                left:0;top:0;
                width:100%;height:100%;
                z-index: 0;
                background: linear-gradient(45deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 100%);
            }
            .titleBlock {
                position: absolute;
                left:0;bottom: 0;
                color: white;
                padding: 10px;
                width: 90%;
                p {
                    position: relative;
                    width:100%;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                    transform: translateX(0);
                }
            }
        }
    }
}

@media(min-width:769px){
    .searchContainer {
        width: 50%;
        height: 100%;
    }
}
@media(max-width: 768px){
    .searchContainer {
        transition: 600ms ease;
        position: absolute;
        top: calc(var(--searchPosition)*(100vh - 3vh - 60px)); left: 0;
        background-color: var(--shadow);
        z-index: 0;
    }
}

